src/ui/snapshots/starwire__ui__frames__floor-59x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 59, 21)"
---










              STAR/WIRE needs at least 60×21
