src/ui/snapshots/starwire__ui__frames__import-60x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 21)"
---
╔═ S T A R / W I R E ════════════════════════════ sources ═╗
║                                             add  refresh ║
║▸ sources                              4 feeds · 5 unread ║
║● All                                                   5 ║
║○ Unread                                                5 ║
║★ Starred                                                 ║
║▶ Videos                                                  ║
║⌕╔═ IMPORT FROM NEWSBOAT ═══════════════════════════════╗ ║
║▸║ Import 41 feeds from newsboat?                       ║ ║
║▸║ /home/somebody/.config/newsboat/urls                 ║ ║
║ ║ 26 are YouTube channels; the other 15 are feeds.     ║ ║
╚═║ The newsboat cache is here too, so what you have     ║═╝
╔═║ already read stays read.                             ║═╗
║ ╚════════════════════════════════════════ y yes · n no ╝ ║
║▸ choose a source                                         ║
╚══════════════════════════════════════════════════════════╝
╔═ READER ═════════════════════════════════════════════════╗
║                                         ‹  star  browser ║
║                       nothing open                       ║
╚══════════════════════════════════════════════════════════╝
? help  enter open  l into  a add  R refresh  / filter   off
