src/ui/snapshots/starwire__ui__frames__settings.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / W I R E ════════════════════════════════════════════════════════════════════ sources ═╗
║                                                                                     add  refresh ║
║▸ sources                                                                      4 feeds · 5 unread ║
║● All                                                                                           5 ║
║○ Unread                                                                                        5 ║
║★ Starred                                                                                         ║
║▶ Videos                                                                                          ║
║⌕ Search…                                                                                         ║
║▸ Tech                 ╔═ SETTINGS ═══════════════════════════════════════╗                     3 ║
║▸ YouTube              ║the window                                        ║                     1 ║
║  Phoronix             ║ theme                                   terminal ║                     1 ║
║                       ║ reading width                                 80 ║                       ║
║                       ║ byline                                        on ║                       ║
║                       ║ mark read on open                             on ║                       ║
║                       ║ extract articles                              on ║                       ║
║                       ║ refresh every                             15 min ║                       ║
║                       ║ graphics                                    auto ║                       ║
║                       ║ pictures                                      on ║                       ║
║                       ║ picture rows                                auto ║                       ║
║                       ║ click a picture                             auto ║                       ║
╚═══════════════════════║                                                  ║═══════════════════════╝
╔═ ENTRIES ═════════════╚════════════════════════ enter change · esc close ╝═══════════════════════╗
║                                                                                ‹  unread  filter ║
║▸ choose a source                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ READER ═════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                 ‹  star  browser ║
║                                           nothing open                                           ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  enter open  l into  a add  R refresh  / filter                                           off
