src/ui/snapshots/starwire__ui__frames__sources-filtered.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / W I R E ════════════════════════════════════════════════════════════════════ sources ═╗
║                                                                                     add  refresh ║
║▸ sources                                                                               /phoronix ║
║  Phoronix                                                                                      1 ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ ENTRIES ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                ‹  unread  filter ║
║▸ choose a source                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ READER ═════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                 ‹  star  browser ║
║                                           nothing open                                           ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  esc clear filter  enter open  l into  a add  R refresh  / filter                         off
